--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.0",
     "canvacord": "^5.0.7",
     "cheerio": "^1.0.0-rc.3",
+    "child_process": "^1.0.2",
     "common-tags": "^1.8.0",
     "covidtracker": "^2.0.1",
     "discord-giveaways": "^4.2.1",
@@ -25,6 +26,7 @@
     "discord-xp": "^1.0.6",
     "discord.js": "^12.3.1",
     "discord.js-pagination": "^1.0.3",
+    "express": "^4.17.1",
     "figlet": "^1.5.0",
     "fs": "0.0.1-security",
     "fund": "^1.0.0",
