--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "covidtracker": "^2.0.1",
     "discord-giveaways": "^4.2.1",
     "discord-player": "^3.2.1",
+    "discord-reply": "0.0.9-a",
     "discord-xp": "^1.0.6",
-    "discord.js": "^12.3.1",
+    "discord.js": "^12.5.1",
     "discord.js-pagination": "^1.0.3",
     "express": "^4.17.1",
     "figlet": "^1.5.0",
