--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "atob": "^2.1.2",
     "axios": "^0.21.0",
     "canvacord": "^5.0.7",
+    "canvas": "^2.7.0",
     "cheerio": "^1.0.0-rc.3",
     "child_process": "^1.0.2",
     "common-tags": "^1.8.0",
     "covidtracker": "^2.0.1",
+    "discord-canvas": "^1.4.1",
     "discord-giveaways": "^4.2.1",
     "discord-player": "^3.2.1",
     "discord-reply": "0.0.9-a",
@@ -47,6 +49,7 @@
     "novelcovid": "^3.0.0",
     "ops": "0.0.1",
     "parse-ms": "^2.1.0",
+    "quickmongo": "^3.0.2",
     "random-puppy": "^1.1.0",
     "reconlx": "^1.1.2",
     "relevant-urban": "^2.0.0",
