--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "discord-xp": "^1.0.6",
     "discord.js": "^12.5.1",
     "discord.js-pagination": "^1.0.3",
+    "enmap": "^5.8.4",
     "express": "^4.17.1",
     "figlet": "^1.5.0",
     "fs": "0.0.1-security",
