--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "canvas": "^2.7.0",
     "cheerio": "^1.0.0-rc.3",
     "child_process": "^1.0.2",
+    "colors": "^1.4.0",
     "common-tags": "^1.8.0",
     "covidtracker": "^2.0.1",
     "discord-canvas": "^1.4.1",
