--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "iso-639-1": "^2.1.7",
     "math.js": "^1.1.46",
     "mathjs": "^7.5.1",
+    "md5": "^2.3.0",
     "moment": "^2.29.1",
     "mongoose": "^5.10.13",
     "ms": "^2.1.2",
     "nekos.life": "^2.0.7",
+    "nekoyasui": "^1.2.4",
     "node-superfetch": "^0.1.10",
     "novelcovid": "^3.0.0",
     "ops": "0.0.1",
